# net-tool

./: .gitignore  README.md  pyproject.toml
netviz/: cli.py  db.py  geo.py  server.py  util.py
netviz/collectors/: __init__.py  lan.py  quality.py  traceroute.py  wan.py  wifi.py
tests/: test_parsers.py
web/: app.js  index.html  style.css
