[project]
name = "network-visualizer"
version = "0.1.0"
description = "Local macOS Wi-Fi to internet network visualizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
netviz = "netviz.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
